[package]
name = "bythors"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.52", features = ["tcp", "tls", "dns", "mdns","tokio", "noise", "yamux", "websocket", "ping", "macros", "request-response", "cbor", "rsa"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.21"
void = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
lean-sys = { git = "https://github.com/filbertphang/lean-sys.git", tag = "v4.11.0" }
once_cell = "1.20.2"
log = "0.4"
env_logger = "0.11.6"
